# shenzi

./: .dockerignore  LICENSE  README.md  manylinux-compose.yml  shenzi.code-workspace
crates/shenzi/: .gitignore  Cargo.toml  README.md  path.txt
crates/shenzi/src/: ask.rs  external.rs  graph.rs  main.rs  manifest.rs  paths.rs  warnings.rs
crates/shenzi/src/cli/: build.rs  init.rs  mod.rs
crates/shenzi/src/factory/: core.rs  deps.rs  node.rs  pkg.rs
crates/shenzi/src/gather/: error.rs  mod.rs
crates/shenzi/src/node/: deps.rs  mod.rs
crates/shenzi/src/parse/: core.rs  elf.rs  error.rs  macho.rs  mod.rs
crates/shenzi/src/pkg/: bootstrap.rs  export.rs  mod.rs  paths.rs
crates/shenzi/src/pkg/patch/: elf.rs  macho.rs  mod.rs
crates/shenzi/src/site_pkgs/: mod.rs  single.rs
crates/shenzi/src/workspace/: mod.rs  packaging.rs
crates/shenzi/src/workspace/pylock/: common.rs  mod.rs  poetry.rs
docs/: dist-structure.md  manifest.md
python/shenzi/: .gitignore  README.md  pyproject.toml
python/shenzi/scripts/: manylinux.Dockerfile
python/shenzi/src/shenzi/: __init__.py
python/shenzi/src/shenzi/discover/: intercept.py  python_props.py
