[package]
name = "shenzi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bimap = "0.6.3"
blake3 = "1.8.2"
env_logger = "0.11.8"
lief = "0.16.5"
log = "0.4.27"
pathdiff = "0.2.3"
petgraph = {version = "0.8.1", features=["std"]}
rand = "0.9.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"

libc = { version = "0.2", optional = true }
regex = "1.11.1"
lazy_static = "1.5.0"
clap = { version = "4.5.41", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["blocking"] }
flate2 = "1.1.2"
tar = "0.4.44"
tempfile = "3.20.0"

[features]
default = []
linux-platform = ["libc"]
